# pre-commit-hooks

./: .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  HOOKS.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  release.yaml
hooks/: consts.py  helper.py  helpers.py  jira_commit_msg.py  prepare_jira_commit_msg.py
scripts/: write_hooks_md.py
tests/: conftest.py  test_commit_msg.py  test_helper.py  test_prepare_commit_msg.py  test_write_hooks_md.py
