[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.poetry]
name = "yogiyo-pre-commit-hooks"
version = "0.1.0"
description = ""
authors = ["donghyeon.kim <donghyeon.kim@deliveryhero.co.kr>"]
packages = [
    { include = "hooks/**/*.py" },
]

[tool.poetry.scripts]
prepare-jira-commit-msg = 'hooks.prepare_jira_commit_msg:main'
jira-commit-msg = 'hooks.jira_commit_msg:main'

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
isort = "^5.3.2"
pytest = "^6.0.1"
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"
pytest-mock = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
