[metadata]
name = jira_commit_msg
version = 0.1.0
url = https://github.com/donghyeon-kim98/jira_commit_msg

author = donghyeon.kim
author_email = donghyeon.kim@deliveryhero.co.kr

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    prepare-jira-commit-msg = hooks.prepare_jira_commit_msg:main
