[metadata]
name = yogiyo_pre_commit_hooks
version = 0.1.0
url = https://github.com/yogiyo/pre-commit-hooks

author = donghyeon.kim
author_email = donghyeon.kim@deliveryhero.co.kr

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    prepare-jira-commit-msg = hooks.prepare_jira_commit_msg:main
    jira-commit-msg = hooks.jira_commit_msg:main
